source/references/3.4.0-rc1/man/filebucket.markdown
---
layout: default
nav: references_man.html
title: puppet filebucket Man Page
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-filebucket</code> - <span class="man-whatis">Store and retrieve files in a filebucket</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>A stand-alone Puppet filebucket client.</p>

<h2 id="USAGE">USAGE</h2>

<p>puppet filebucket <var>mode</var> [-h|--help] [-V|--version] [-d|--debug]
  [-v|--verbose] [-l|--local] [-r|--remote] [-s|--server <var>server</var>]
  [-b|--bucket <var>directory</var>] <var>file</var> <var>file</var> ...</p>

<p>Puppet filebucket can operate in three modes, with only one mode per call:</p>

<p>backup:
  Send one or more files to the specified file bucket. Each sent file is
  printed with its resulting md5 sum.</p>

<p>get:
  Return the text associated with an md5 sum. The text is printed to
  stdout, and only one file can be retrieved at a time.</p>

<p>restore:
  Given a file path and an md5 sum, store the content associated with
  the sum into the specified file path. You can specify an entirely new
  path to this argument; you are not restricted to restoring the content
  to its original location.</p>

<h2 id="DESCRIPTION">DESCRIPTION</h2>

<p>This is a stand-alone filebucket client for sending files to a local or
central filebucket.</p>

<p>Note that 'filebucket' defaults to using a network-based filebucket
available on the server named 'puppet'. To use this, you'll have to be
running as a user with valid Puppet certificates. Alternatively, you can
use your local file bucket by specifying '--local'.</p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any configuration parameter that's valid in the configuration
file is also a valid long argument. For example, 'ssldir' is a valid
configuration parameter, so you can specify '--ssldir <var>directory</var>' as an
argument.</p>

<p>See the configuration file documentation at
http://docs.puppetlabs.com/references/stable/configuration.html for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
'--genconfig'.</p>

<dl>
<dt class="flush">--debug</dt><dd><p>Enable full debugging.</p></dd>
<dt class="flush">--help</dt><dd><p>Print this help message</p></dd>
<dt class="flush">--local</dt><dd><p>Use the local filebucket. This will use the default configuration
information.</p></dd>
<dt>--remote</dt><dd><p>Use a remote filebucket. This will use the default configuration
information.</p></dd>
<dt>--server</dt><dd><p>The server to send the file to, instead of locally.</p></dd>
<dt>--verbose</dt><dd><p>Print extra information.</p></dd>
<dt>--version</dt><dd><p>Print version information.</p></dd>
</dl>


<h2 id="EXAMPLE">EXAMPLE</h2>

<pre><code>$ puppet filebucket backup /etc/passwd
/etc/passwd: 429b225650b912a2ee067b0a4cf1e949
$ puppet filebucket restore /tmp/passwd 429b225650b912a2ee067b0a4cf1e949
</code></pre>

<h2 id="AUTHOR">AUTHOR</h2>

<p>Luke Kanies</p>

<h2 id="COPYRIGHT">COPYRIGHT</h2>

<p>Copyright (c) 2011 Puppet Labs, LLC Licensed under the Apache 2.0 License</p>

</div>
